# credit-risk-kedro

./: .gitignore  README.md  environment.yml
risk-model/: README.md  pyproject.toml
risk-model/conf/: logging.yml
risk-model/conf/base/: catalog.yml  parameters_cross_validation.yml  parameters_data_ingestion.yml  parameters_data_processing.yml  parameters_feature_engineering.yml  parameters_feature_importance.yml  parameters_hyperparam_tuning.yml  parameters_log_reg.yml  parameters_model_evaluation.yml  parameters_model_inference.yml  parameters_model_training.yml  parameters_shap_explanation.yml  parameters_split_data.yml  parameters_xgboost.yml
risk-model/notebooks/: Untitled.ipynb
risk-model/src/risk_model/: __init__.py  __main__.py  settings.py
risk-model/src/risk_model/pipelines/cross_validation/: __init__.py  (+2 more)
risk-model/tests/pipelines/cross_validation/: test_pipeline.py
risk-model/tests/pipelines/data_ingestion/: test_pipeline.py
risk-model/tests/pipelines/feature_engineering/: test_pipeline.py
risk-model/tests/pipelines/feature_importance/: test_pipeline.py
risk-model/tests/pipelines/hyperparam_tuning/: test_pipeline.py
risk-model/tests/pipelines/model_evaluation/: test_pipeline.py
risk-model/tests/pipelines/model_inference/: test_pipeline.py
risk-model/tests/pipelines/model_training/: test_pipeline.py
risk-model/tests/pipelines/shap_explanation/: test_pipeline.py
risk-model/tests/pipelines/split_data/: test_pipeline.py
src/: README.md  pyproject.toml
src/conf/: logging.yml
src/src/src/: __init__.py  __main__.py  settings.py
(+33 files in other folders)
